--- a/.gitignore
+++ b/.gitignore
@@ -1,38 +1,5 @@
-target/
-!.mvn/wrapper/maven-wrapper.jar
-!**/src/main/**/target/
-!**/src/test/**/target/
+# Exclude Serenity BDD configuration files
+serenity.properties
+serenity.conf
 
-### IntelliJ IDEA ###
-Test.idea/modules.xml
-Test.idea/jarRepositories.xml
-Test.idea/compiler.xml
-Test.idea/libraries/
-*.iws
-*.iml
-*.ipr
-
-### Eclipse ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
-
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
-build/
-!**/src/main/**/build/
-!**/src/test/**/build/
-
-### VS Code ###
-.vscode/
-
-### Mac OS ###
-.DS_Store
+.env
